@@ -18,8 +18,7 @@ public static partial class GameManager
 	public static PreGameDataStruct PreGameData = new();
 	
 	
-	public static Dictionary<int,(Vector2Int,WorldObject.WorldObjectData)> Player1UnitPositions = new();
-	public static Dictionary<int,(Vector2Int,WorldObject.WorldObjectData)> Player2UnitPositions = new();
+
 	
 	
 	public static ClientInstance? GetPlayer(bool isPlayer1)
@@ -175,9 +174,9 @@ public static partial class GameManager
 				foreach (var u in T1Units)
 				{
 					Unit unit = WorldObjectManager.GetObject(u)!.UnitComponent!;
-					if (!Player1UnitPositions.ContainsKey(u))
+					if (!GetPlayer(true)!.KnownUnitPositions.ContainsKey(u))
 					{
-						Player1UnitPositions.Add(u,(unit.WorldObject.TileLocation.Position,unit.WorldObject.GetData()));
+						GetPlayer(true)!.KnownUnitPositions.Add(u,(unit.WorldObject.TileLocation.Position,unit.WorldObject.GetData()));
 					}
 
 				
@@ -185,9 +184,9 @@ public static partial class GameManager
 				foreach (var u in T2Units)
 				{
 					Unit unit = WorldObjectManager.GetObject(u)!.UnitComponent!;
-					if (!Player2UnitPositions.ContainsKey(u))
+					if (!GetPlayer(false)!.KnownUnitPositions.ContainsKey(u))
 					{
-						Player2UnitPositions.Add(u, (unit.WorldObject.TileLocation.Position, unit.WorldObject.GetData()));
+						GetPlayer(false)!.KnownUnitPositions.Add(u, (unit.WorldObject.TileLocation.Position, unit.WorldObject.GetData()));
 					}
 				}
 				//PlayerUnitPositionsDirty = true;
@@ -231,69 +230,39 @@ public static partial class GameManager
 	}
 
 	public static bool PlayerUnitPositionsDirty = false;
-	public static void UpdatePlayerSideUnitPositions(bool newTurn = false)
+
+	private static void UpdatePlayerSideUnitPositionsForPlayer(bool player1,bool newTurn = false)
 	{
-		Log.Message("UNITPOSITIONS","updating unit positions");
-		foreach (var pos in new Dictionary<int,(Vector2Int,WorldObject.WorldObjectData)>(Player1UnitPositions))
+		ClientInstance c = GetPlayer(player1)!;
+		if(c == null) return;
+		foreach (var pos in new Dictionary<int,(Vector2Int,WorldObject.WorldObjectData)>(c.KnownUnitPositions))
 		{
 			var t = WorldManager.Instance.GetTileAtGrid(pos.Value.Item1);
 			Visibility minVis = Visibility.Partial;
 			if(pos.Value.Item2.UnitData!.Value.Crouching) minVis = Visibility.Full;
-			if(!t.IsVisible(minVis,team1:true) && !pos.Value.Item2.UnitData.Value.Team1) continue;//if they cant see the tile and the unit is from another team dont check anything
+			
+			
+			if(!t.IsVisible(minVis,player1) && pos.Value.Item2.UnitData.Value.Team1 != player1) continue;//if they cant see the tile and the unit is from another team dont check anything
 			if (t.UnitAtLocation == null)
 			{
-				Player1UnitPositions.Remove(pos.Key);
+				c.KnownUnitPositions.Remove(pos.Key);
 				Log.Message("UNITPOSITIONS","P1 unit at pos: "+pos.Value.Item1+" is null");
 				PlayerUnitPositionsDirty = true;
 			}
 			else if(t.UnitAtLocation.WorldObject.ID != pos.Key){
-				Player1UnitPositions.Remove(pos.Key);
-				Player1UnitPositions.Remove(t.UnitAtLocation.WorldObject.ID);
-				Player1UnitPositions.Add(t.UnitAtLocation.WorldObject.ID,(pos.Value.Item1,t.UnitAtLocation.WorldObject.GetData()));
+				c.KnownUnitPositions.Remove(pos.Key);
+				c.KnownUnitPositions.Remove(t.UnitAtLocation.WorldObject.ID);
+				c.KnownUnitPositions.Add(t.UnitAtLocation.WorldObject.ID,(pos.Value.Item1,t.UnitAtLocation.WorldObject.GetData()));
 				Log.Message("UNITPOSITIONS","P1 unit at pos: "+pos.Value.Item1+" is not the same as the one at the tile");
 				PlayerUnitPositionsDirty = true;
 			}
 			else
 			{
 				var unitData = (pos.Value.Item1, t.UnitAtLocation!.WorldObject.GetData());
-				if (Player1UnitPositions.ContainsKey(pos.Key) && !Player1UnitPositions[pos.Key].Equals(unitData))
+				if (c.KnownUnitPositions.ContainsKey(pos.Key) && !c.KnownUnitPositions[pos.Key].Equals(unitData))
 				{
-					Player1UnitPositions[pos.Key] = unitData;
+					c.KnownUnitPositions[pos.Key] = unitData;
 					Log.Message("UNITPOSITIONS","P1 unit at pos: "+pos.Value.Item1+" has different data");
-					PlayerUnitPositionsDirty = true;
-				}
-			}
-		}
-		foreach (var pos  in new Dictionary<int,(Vector2Int,WorldObject.WorldObjectData)>(Player2UnitPositions))
-		{
-			var t = WorldManager.Instance.GetTileAtGrid(pos.Value.Item1);
-			Visibility minVis = Visibility.Partial;
-			if(pos.Value.Item2.UnitData!.Value.Crouching) minVis = Visibility.Full;
-			if(!t.IsVisible(minVis,team1:false) && pos.Value.Item2.UnitData!.Value.Team1) continue;//if they cant see the tile - dont do any checks
-			if (t.UnitAtLocation == null)
-			{
-				Player2UnitPositions.Remove(pos.Key);
-				Log.Message("UNITPOSITIONS","P2 unit at pos: "+pos.Value.Item1+" is null");
-
-				PlayerUnitPositionsDirty = true;
-			}
-			else if(t.UnitAtLocation.WorldObject.ID != pos.Key){
-				Player2UnitPositions.Remove(pos.Key);
-				Player2UnitPositions.Remove(t.UnitAtLocation.WorldObject.ID);
-				Player2UnitPositions.Add(t.UnitAtLocation.WorldObject.ID,(pos.Value.Item1,t.UnitAtLocation.WorldObject.GetData()));
-				Log.Message("UNITPOSITIONS","P2 unit at pos: "+pos.Value.Item1+" is not the same as the one at the tile");
-
-				PlayerUnitPositionsDirty = true;
-			}
-			else
-			{
-
-				var unitData = (pos.Value.Item1, t.UnitAtLocation!.WorldObject.GetData());
-				if (Player2UnitPositions.ContainsKey(pos.Key) && !Player2UnitPositions[pos.Key].Equals(unitData))
-				{
-					Player2UnitPositions[pos.Key] = unitData;
-					Log.Message("UNITPOSITIONS","P2 unit at pos: "+pos.Value.Item1+" has different data");
-
 					PlayerUnitPositionsDirty = true;
 				}
 			}
@@ -302,59 +271,41 @@ public static partial class GameManager
 		if (newTurn)
 		{
 			//remove overwatch from all the unit datas
-			foreach (var key in Player1UnitPositions.Keys.ToList())
+			foreach (var key in c.KnownUnitPositions.Keys.ToList())
 			{
-				
-				var data = Player1UnitPositions[key];
-				if (data.Item2.UnitData!.Value.Team1 == IsPlayer1Turn)
-				{
-					data.Item2.UnitData = data.Item2.UnitData!.Value with {Overwatch = (false, -1)};
-					Player1UnitPositions[key] = data;
-				}
-			}
 
-			foreach (var key in Player2UnitPositions.Keys.ToList())
-			{
-				var data = Player2UnitPositions[key];
+				var data =  c.KnownUnitPositions[key];
 				if (data.Item2.UnitData!.Value.Team1 == IsPlayer1Turn)
 				{
 					data.Item2.UnitData = data.Item2.UnitData!.Value with {Overwatch = (false, -1)};
-					Player2UnitPositions[key] = data;
+					c.KnownUnitPositions[key] = data;
 				}
 			}
-			
 		}
+	}
+	public static void UpdatePlayerSideUnitPositions(bool newTurn = false)
+	{
+		Log.Message("UNITPOSITIONS","updating unit positions");
+		
+		UpdatePlayerSideUnitPositionsForPlayer(true,newTurn);
+		UpdatePlayerSideUnitPositionsForPlayer(false,newTurn);
 	}
 
 	public static void ShowUnitToEnemy(Unit spotedUnit)
 	{
-	
-		if(spotedUnit.IsPlayer1Team)
+		ClientInstance c = GetPlayer(!spotedUnit.IsPlayer1Team)!;
+		
+		if (!c.KnownUnitPositions.ContainsKey(spotedUnit.WorldObject.ID))
 		{
-			if (!Player2UnitPositions.ContainsKey(spotedUnit.WorldObject.ID))
-			{
-				Player2UnitPositions.Add(spotedUnit.WorldObject.ID,(spotedUnit.WorldObject.TileLocation.Position,spotedUnit.WorldObject.GetData()));
-				PlayerUnitPositionsDirty = true;
+			c.KnownUnitPositions.Add(spotedUnit.WorldObject.ID,(spotedUnit.WorldObject.TileLocation.Position,spotedUnit.WorldObject.GetData()));
+			PlayerUnitPositionsDirty = true;
 
-			}else if (Player2UnitPositions[spotedUnit.WorldObject.ID].Item1 != spotedUnit.WorldObject.TileLocation.Position)
-			{
-				Player2UnitPositions[spotedUnit.WorldObject.ID] = (spotedUnit.WorldObject.TileLocation.Position,spotedUnit.WorldObject.GetData());
-				PlayerUnitPositionsDirty = true;
-			}
-			
-		}
-		else
+		}else if (c.KnownUnitPositions[spotedUnit.WorldObject.ID].Item1 != spotedUnit.WorldObject.TileLocation.Position)
 		{
-			if (!Player1UnitPositions.ContainsKey(spotedUnit.WorldObject.ID))
-			{
-				Player1UnitPositions.Add(spotedUnit.WorldObject.ID,(spotedUnit.WorldObject.TileLocation.Position,spotedUnit.WorldObject.GetData()));
-				PlayerUnitPositionsDirty = true;
-			}else if (Player1UnitPositions[spotedUnit.WorldObject.ID].Item1 != spotedUnit.WorldObject.TileLocation.Position)
-			{
-				Player1UnitPositions[spotedUnit.WorldObject.ID] = (spotedUnit.WorldObject.TileLocation.Position,spotedUnit.WorldObject.GetData());
-				PlayerUnitPositionsDirty = true;
-			}
+			c.KnownUnitPositions[spotedUnit.WorldObject.ID] = (spotedUnit.WorldObject.TileLocation.Position,spotedUnit.WorldObject.GetData());
+			PlayerUnitPositionsDirty = true;
 		}
+		
 	}
 
 	public static void SequenceFinished(Connection c)
@@ -380,6 +331,7 @@ public static partial class GameManager
 		public bool IsReadyForNextSequence = false;
 		public bool ReadyForNextSequence => IsReadyForNextSequence || IsAI || IsPracticeOpponent;
 		public readonly Dictionary<Vector2Int, WorldTile.WorldTileData> WorldState = new(); 
+		public Dictionary<int,(Vector2Int,WorldObject.WorldObjectData)> KnownUnitPositions = new();
 
 		public ClientInstance(string name,Connection? con)
 		{
@@ -461,7 +413,7 @@ public static partial class GameManager
 		tutorial = true;
 		WorldManager.Instance.LoadMap("/Maps/Special/tutorial.mapdata");
        
-		PracticeMode(GameManager.Player1.Connection);
+		PracticeMode(Player1.Connection);
 		NetworkingManager.SendMapData(Player1!.Connection!);
 		var t = new Task(delegate
 		{
@@ -497,12 +449,12 @@ public static partial class GameManager
 			foreach (var u in T1Units)
 			{
 				Unit unit = WorldObjectManager.GetObject(u)!.UnitComponent!;
-				Player1UnitPositions.Add(u, (unit.WorldObject.TileLocation.Position, unit.WorldObject.GetData()));
+				Player1.KnownUnitPositions.Add(u, (unit.WorldObject.TileLocation.Position, unit.WorldObject.GetData()));
 			}
 			foreach (var u in T2Units)
 			{
 				Unit unit = WorldObjectManager.GetObject(u)!.UnitComponent!;
-				Player2UnitPositions.Add(u,(unit.WorldObject.TileLocation.Position,unit.WorldObject.GetData()));
+				Player2.KnownUnitPositions.Add(u,(unit.WorldObject.TileLocation.Position,unit.WorldObject.GetData()));
 			}
 			NetworkingManager.SendGameData();
 			WorldManager.Instance.MakeFovDirty();
@@ -545,15 +497,15 @@ public static partial class GameManager
 			foreach (var u in T1Units)
 			{
 				Unit unit = WorldObjectManager.GetObject(u)!.UnitComponent!;
-				Player1UnitPositions.Add(u, (unit.WorldObject.TileLocation.Position, unit.WorldObject.GetData()));
+				Player1.KnownUnitPositions.Add(u, (unit.WorldObject.TileLocation.Position, unit.WorldObject.GetData()));
 			}
 
 			foreach (var u in T2Units)
 			{
 				Unit unit = WorldObjectManager.GetObject(u)!.UnitComponent!;
-				if (!Player2UnitPositions.ContainsKey(u))
+				if (!Player2.KnownUnitPositions.ContainsKey(u))
 				{
-					Player2UnitPositions.Add(u, (unit.WorldObject.TileLocation.Position, unit.WorldObject.GetData()));
+					Player2.KnownUnitPositions.Add(u, (unit.WorldObject.TileLocation.Position, unit.WorldObject.GetData()));
 				}
 			}
 
@@ -613,18 +565,18 @@ public static partial class GameManager
 			foreach (var u in T2Units)
 			{
 				Unit unit = WorldObjectManager.GetObject(u)!.UnitComponent!;
-				if (!Player2UnitPositions.ContainsKey(u))
+				if (!Player2.KnownUnitPositions.ContainsKey(u))
 				{
-					Player2UnitPositions.Add(u, (unit.WorldObject.TileLocation.Position, unit.WorldObject.GetData()));
+					Player2.KnownUnitPositions.Add(u, (unit.WorldObject.TileLocation.Position, unit.WorldObject.GetData()));
 				}
 			}
 			
 			foreach (var u in T1Units)
 			{
 				Unit unit = WorldObjectManager.GetObject(u)!.UnitComponent!;
-				if (!Player1UnitPositions.ContainsKey(u))
+				if (!Player1.KnownUnitPositions.ContainsKey(u))
 				{
-					Player1UnitPositions.Add(u, (unit.WorldObject.TileLocation.Position, unit.WorldObject.GetData()));
+					Player1.KnownUnitPositions.Add(u, (unit.WorldObject.TileLocation.Position, unit.WorldObject.GetData()));
 				}
 			}
 			List<Vector2Int> poses = new List<Vector2Int>();
@@ -632,7 +584,7 @@ public static partial class GameManager
 			poses.Add(new Vector2Int(29, 44));
 			poses.Add(new Vector2Int(29, 43));
 
-			foreach (var u in Player2UnitPositions.ToList())
+			foreach (var u in Player2.KnownUnitPositions.ToList())
 			{
 				if (!u.Value.Item2.UnitData!.Value.Team1)
 				{
@@ -685,9 +637,9 @@ public static partial class GameManager
 			foreach (var u in T1Units)
 			{
 				Unit unit = WorldObjectManager.GetObject(u)!.UnitComponent!;
-				if (!Player1UnitPositions.ContainsKey(u))
+				if (!Player1.KnownUnitPositions.ContainsKey(u))
 				{
-					Player1UnitPositions.Add(u, (unit.WorldObject.TileLocation.Position, unit.WorldObject.GetData()));
+					Player1.KnownUnitPositions.Add(u, (unit.WorldObject.TileLocation.Position, unit.WorldObject.GetData()));
 				}
 			}
 			NetworkingManager.SendAllSeenUnitPositions();
