@@ -20,3 +20,5 @@ Alpha 4.1
 -Large variety of multiplayer stability and crash fixes
 -Added bullet tracers
 -Overwatching units now can only shoot units they personally see themselves(no assited spoting from other friendlies)
+-Fixed overwatching abilities using the determination cost of the ability
+-Fixed master server chat messages appearing in game chat
